岗位距离计算以及地图组件呈现企业位置

--- a/manifest.json
+++ b/manifest.json
@@ -68,5 +68,16 @@
     "uniStatistics" : {
         "enable" : false
     },
-    "vueVersion" : "2"
+    "vueVersion" : "2",
+    "h5" : {
+        "sdkConfigs" : {
+            "maps" : {
+                "amap" : {
+                    "key" : "fcc9cbc6387d1452d4efea62e79410d1",
+                    "securityJsCode" : "bee88dbdb8c57bd37da6652088780eba",
+                    "serviceHost" : ""
+                }
+            }
+        }
+    }
 }
